Activate tomcat-myfaces IT on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ branches:
 env:
    - SERVER=wildfly
    - SERVER=tomcat-mojarra
-#  - SERVER=tomcat-myfaces
+   - SERVER=tomcat-myfaces
 #  - SERVER=tomee
 #  - SERVER=payara
 #  - SERVER=glassfish
