Add Piranha to Travis (deactivated for now)

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ env:
    - SERVER=wildfly
    - SERVER=tomcat-mojarra
    - SERVER=tomcat-myfaces
+#  - SERVER=piranha
 #  - SERVER=tomee
 #  - SERVER=payara
 #  - SERVER=glassfish
