--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,7 @@
 					<javadocVersion>${javase.version}</javadocVersion>
 					<notimestamp>true</notimestamp>
 					<splitindex>true</splitindex>
+					<doclint>all,-missing</doclint>
 					<doctitle>OmniFaces API documentation</doctitle>
 					<links>
 						<link>https://jakarta.ee/specifications/platform/${jakartaee.version}/apidocs/</link>
