--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>${javase.version}</maven.compiler.source>
-		<maven.compiler.target>15</maven.compiler.target> <!-- Required by Piranha -->
+		<maven.compiler.target>${javase.version}</maven.compiler.target>
 		<maven.source.excludeResources>true</maven.source.excludeResources>
 
 		<!-- Test server versions. -->
@@ -73,10 +73,8 @@
 		<test.weld.version>4.0.0.Final</test.weld.version>
 		<test.hibernateValidator.version>7.0.0.Final</test.hibernateValidator.version>
 		<test.jsonp.version>2.0.0</test.jsonp.version>
-		<test.tyrus.version>2.0.0</test.tyrus.version>
 		<test.mojarra.version>3.0.0</test.mojarra.version>
 		<test.myfaces.version>3.0.0-RC1</test.myfaces.version>
-		<test.piranha.version>21.1.0</test.piranha.version> <!-- TODO: fails with CDI error during startup: org.jboss.weld.exceptions.DeploymentException: WELD-001414: Bean name is ambiguous. Name csfFLOWDISCOVERYCDIHELPER -->
 		<test.tomee.version>9.0.0-M3</test.tomee.version> <!-- TODO: JEE9 compatible version which supports jakarta.ee XML namespace (M3 unfortunately doesn't support it yet, it still throws jakarta.xml.bind.UnmarshalException: unexpected element (uri:"https://jakarta.ee/xml/ns/jakartaee", local:"web-fragment")) -->
 		<test.payara.version>5.2020.4</test.payara.version> <!-- TODO: JEE9 compatible version -->
 		<test.glassfish.version>6.0.0</test.glassfish.version> <!-- TODO: Java11 compatible version. -->
@@ -660,38 +658,6 @@
 							<environmentVariables>
 								<CATALINA_HOME>${project.build.directory}/apache-tomcat-${test.tomcat.version}</CATALINA_HOME>
 							</environmentVariables>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<!-- Piranha integration test profile: mvn verify -P piranha -->
-		<profile>
-			<id>piranha</id>
-			<dependencies>
-				<dependency>
-					<groupId>cloud.piranha.arquillian</groupId>
-					<artifactId>piranha-arquillian-server</artifactId>
-					<version>${test.piranha.version}</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<systemPropertyVariables>
-								<javaEEServer>piranha-embedded</javaEEServer>
-								<war.libraries>
-									org.glassfish:jakarta.faces:${test.mojarra.version},
-									org.hibernate.validator:hibernate-validator:${test.hibernateValidator.version},
-									org.glassfish:jakarta.json:${test.jsonp.version},
-									org.glassfish.tyrus:tyrus-core:${test.tyrus.version}
-								</war.libraries>
-							</systemPropertyVariables>
 						</configuration>
 					</plugin>
 				</plugins>
